--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -1775,10 +1775,14 @@
     <!-- Instructions telling the user to enter their SIM PIN to unlock the keyguard.
          Displayed in one line in a large font.  -->
     <string name="keyguard_password_enter_pin_code">Enter PIN code</string>
+    <string name="keyguard_password_enter_pin_code_for_subscription">Enter PIN code for Subscription</string>
 
     <!-- Instructions telling the user to enter their SIM PUK to unlock the keyguard.
          Displayed in one line in a large font.  -->
     <string name="keyguard_password_enter_puk_code">Enter PUK and new PIN code</string>
+    <!-- Instructions telling the user to enter their SIM PUK for a particular subscription
+         to unlock the keyguard. Displayed in one line in a large font.  -->
+    <string name="keyguard_password_enter_puk_code_for_subscription">Enter PUK and new PIN code for Subscription</string>
 
     <!-- Prompt to enter SIM PUK in Edit Text Box in unlock screen -->
     <string name="keyguard_password_enter_puk_prompt">PUK code</string>
@@ -1799,6 +1803,10 @@
     <!-- Instructions telling the user that they entered the wrong pin while trying
          to unlock the keyguard.  Displayed in one line in a large font.  -->
     <string name="keyguard_password_wrong_pin_code">Incorrect PIN code!</string>
+
+    <!-- Instructions telling the user that they entered the wrong puk while trying
+         to unlock the keyguard.  Displayed in one line in a large font.  -->
+    <string name="keyguard_password_wrong_puk_code">Incorrect PUK code!</string>
 
     <!-- Notification telling the user that the PIN1 they entered is valid -->
     <string name="keyguard_pin_accepted">Code Accepted!</string>
