CAF:QRD_QI:SETTINGS:SIMSPN:none:add SPN
	Component Name: SETTINGS
	Feature Name: SIMSPN
	Fixed CRs: none
	Targets: msm7627A_sku1,msm7627A_sku3
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: sun meng

Change-Id: I7658ac8ef9f29d65e32701399bf2e0d5c5572641

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-/* //device/apps/common/assets/res/any/strings.xml
+/* Copyright (C) 2012, Code Aurora Forum. All rights reserved.
 **
 ** Copyright 2006, The Android Open Source Project
 **
@@ -3428,4 +3428,8 @@
     <!-- STK setup Call -->
     <string name="SetupCallDefault">Accept Call?</string>
 
+    <!-- On carrier name display -->
+    <string name="China_Mobile">China Mobile</string>
+    <string name="China_Unicom">China Unicom</string>
+    <string name="China_Telecom">China Telecom</string>
 </resources>
