--- a/core/res/res/values-zh-rCN/strings.xml
+++ b/core/res/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-/* //device/apps/common/assets/res/any/strings.xml
+/* Copyright (C) 2012, Code Aurora Forum. All rights reserved.
 **
 ** Copyright 2006, The Android Open Source Project
 **
@@ -1230,4 +1230,9 @@
     <string name="sending" msgid="8715108995741758718">"正在发送..."</string>
     <string name="launchBrowserDefault" msgid="2057951947297614725">"要启动浏览器吗？"</string>
     <string name="SetupCallDefault" msgid="6870275517518479651">"要接听电话吗？"</string>
+
+    <!-- On carrier name display -->
+    <string name="China_Mobile">中国移动</string>
+    <string name="China_Unicom">中国联通</string>
+    <string name="China_Telecom">中国电信</string>
 </resources>
