CAF:QRD_QI:BUGFIX:None:none:modify for show sim deactivated in lock screen when sub is deactivated.
	Component Name: BUGFIX
	Feature Name: None
	Fixed CRs: none
	Targets: msm7627A_sku1,msm7627A_sku3
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing:
	Peer Review:
	Reference Build or VU:
	Comments: c_hluo

Change-Id: I0756efb899f3a1b7af1d72d0dcc6747c44767819

--- a/core/res/res/values-zh-rCN/strings.xml
+++ b/core/res/res/values-zh-rCN/strings.xml
@@ -715,6 +715,7 @@
     <string name="lockscreen_access_pattern_cleared" msgid="5583479721001639579">"图案已清除"</string>
     <string name="lockscreen_access_pattern_cell_added" msgid="6756031208359292487">"已添加单元格"</string>
     <string name="lockscreen_access_pattern_detected" msgid="4988730895554057058">"图案绘制完成"</string>
+    <string name="lockscreen_sim_deactivate">SIM卡禁用</string>
     <string name="password_keyboard_label_symbol_key" msgid="992280756256536042">"?123"</string>
     <string name="password_keyboard_label_alpha_key" msgid="8001096175167485649">"ABC"</string>
     <string name="password_keyboard_label_alt_key" msgid="1284820942620288678">"ALT"</string>
