--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -3045,7 +3045,7 @@
 
     <!-- Shown in "Managed Roaming" dialog when registration is denied with rejCode 10. -->
     <string name="managed_roaming_title">Managed Roaming</string>
-    <string name="managed_roaming_dialog_content">Network with Limited Service found. Do you want to initiate a Network Search?</string>
+    <string name="managed_roaming_dialog_content">You have limited service because manual search mode. Would you like reselect PLMN to gain possible normal service?</string>
     <string name="managed_roaming_dialog_ok_button">Yes</string>
     <string name="managed_roaming_dialog_cancel_button">No</string>
 
