CAF:QRD_AP:STK:None:356586:The prompt "Code Accepted" can't be translated into Chinese when system language is Chinese.
	Component Name: STK
	Feature Name: None
	Fixed CRs: 356586
	Targets: msm8X25_sku5,msm8X25_sku7
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing: none
	Peer Review:
	Reference Build or VU:
	Comments: Huang Li
	(*commit tool - 1.2.0)

Change-Id: I453bb3d94eeb6a510f1ee6ef9fd5cf0b73c4526f

--- a/core/res/res/values-zh-rCN/strings.xml
+++ b/core/res/res/values-zh-rCN/strings.xml
@@ -656,6 +656,7 @@
     <string name="keyguard_password_enter_pin_password_code" msgid="638347075625491514">"输入 PIN 进行解锁"</string>
     <string name="keyguard_password_wrong_pin_code" msgid="1295984114338107718">"PIN 码不正确！"</string>
     <string name="keyguard_password_wrong_puk_code">"PUK 码不正确！"</string>
+    <string name="keyguard_pin_accepted">"PIN 码正确！"</string>
     <string name="keyguard_label_text" msgid="861796461028298424">"要解锁，请先按 MENU 再按 0。"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="696192103195090970">"急救或报警电话"</string>
     <string name="lockscreen_carrier_default" msgid="8963839242565653192">"无服务"</string>
