CAF:QRD_AP:SETTINGS:None:354578:The prompt information of backup account display as English Characters even if set system language as Chinese.
	Component Name: SETTINGS
	Feature Name: None
	Fixed CRs: 354578
	Targets: msm8X25_sku5,msm8X25_sku7
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing: none
	Peer Review:
	Reference Build or VU:
	Comments: Huang Li
	(*commit tool - 1.2.0)

Change-Id: I90a1f4994384d81a604042077b8f087380671dd5

--- a/core/res/res/values-zh-rCN/strings.xml
+++ b/core/res/res/values-zh-rCN/strings.xml
@@ -1240,4 +1240,6 @@
     <string name="China_Mobile">中国移动</string>
     <string name="China_Unicom">中国联通</string>
     <string name="China_Telecom">中国电信</string>
+
+    <string name="transport_destination">备份调试状态下的用户私有缓存</string>
 </resources>
