CAF:QRD_AP:LOCKSCREEN  :None:361992:fix the issue that show "No service" when turn on airplane mode.
	Component Name: LOCKSCREEN
	Feature Name: None
	Fixed CRs: 361992
	Targets: msm8X25_sku5,msm8X25_sku7
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing: turn on airplane mode, check the display of lock screen, should show "Airplane Mode".
	Peer Review:
	Reference Build or VU:
	Comments: c_hluo
	(*commit tool - 1.2.0)

Change-Id: Ia2efe2afe68aa2bd9cf3df7715e802a993571a5d

--- a/core/res/res/values/strings.xml
+++ b/core/res/res/values/strings.xml
@@ -1912,6 +1912,8 @@
     <string name="lockscreen_sim_error_message">SIM card is Invalid.</string>
     <!-- Show in the lock screen when the SIM is deactivated. -->
     <string name="lockscreen_sim_deactivate">SIM deactivated</string>
+    <!-- Shown in the lock screen to tell the user that phone is in airplane mode-->
+    <string name="airplane_mode_on_message">Airplane Mode</string>
 
     <!-- When the user inserts a sim card from an unsupported network, it becomes network
          locked -->
