CAF:QRD_QI:SETTINGS:None:none:translate slot name into local language when user not modify it
	Component Name: SETTINGS
	Feature Name: None
	Fixed CRs: none
	Targets: ALL
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing: none
	Peer Review:
	Reference Build or VU:
	Comments: sunmeng
	(*commit tool - 1.2.0)

Change-Id: I886be9b2f86f49166ca92042c604852ea36d7dc4

--- a/packages/SettingsProvider/res/values-zh-rCN/strings.xml
+++ b/packages/SettingsProvider/res/values-zh-rCN/strings.xml
@@ -20,4 +20,6 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_label" msgid="4567566098528588863">"设置存储"</string>
+	<string name="default_sim1_name">卡槽1</string>
+	<string name="default_sim2_name">卡槽2</string>
 </resources>
