--- a/packages/SettingsProvider/res/values/strings.xml
+++ b/packages/SettingsProvider/res/values/strings.xml
@@ -19,4 +19,6 @@
 <resources>
     <!-- Name of the activity for Settings storage. -->
     <string name="app_label">Settings Storage</string>
+	<string name="default_sim1_name">SLOT1</string>
+	<string name="default_sim2_name">SLOT2</string>
 </resources>
