CAF:QRD_AP:CONTACTS:None:365086:fix cr 365086, do not show quick contact when there is no quick contact in searching bar
	Component Name: CONTACTS
	Feature Name: None
	Fixed CRs: 365086
	Targets: msm8X25_sku5,msm8X25_sku7
	Required VUs:
	Dependency Notes:
	Limitations:
	Suggested Testing: none
	Peer Review:
	Reference Build or VU:
	Comments: farenl
	(*commit tool - 1.2.0)

--- a/core/res/res/values-zh-rCN/strings.xml
+++ b/core/res/res/values-zh-rCN/strings.xml
@@ -1242,4 +1242,6 @@
     <string name="China_Telecom">中国电信</string>
 
     <string name="transport_destination">备份调试状态下的用户私有缓存</string>
+
+    <string name="No_Quick_Contact">无快速联络</string>
 </resources>
